# playerlist-generator

./: .gitignore  Dockerfile  README.md  api.py  convert_tf2bd.py  docker-compose.yml  pull_both.py  pull_mcd.py  pull_tacobot.py  pyproject.toml  requirements.txt  stats.py  update_list.py
data/: playerlist.json
player_list_generator/: generator.py  mac_list_to_nc.py  pull_both.py  pull_lilithwolf.py  pull_mcd.py  pull_tacobot.py  stats.py  update_list.py
